// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormUi 1`] = `
<Styled(ViewNB)>
  <Styled(ViewNB)
    padder={true}
  >
    <Styled(Item)
      stackedLabel={true}
    >
      <Styled(Label)>
        Email
      </Styled(Label)>
      <Styled(Input)
        onBlur={[Function]}
        onChangeText={[MockFunction]}
        value=""
      />
    </Styled(Item)>
  </Styled(ViewNB)>
  <Styled(ViewNB)
    padder={true}
  >
    <Styled(Button)
      block={true}
      onPress={[Function]}
      rounded={true}
      success={true}
      testID="resetBtn"
    >
      <Styled(Icon)
        color="white"
        fontSize={30}
        name="lock-reset"
        type="MaterialCommunityIcons"
      />
      <Styled(Text)>
        Reset the password
      </Styled(Text)>
    </Styled(Button)>
  </Styled(ViewNB)>
</Styled(ViewNB)>
`;

exports[`FormUi 2`] = `
<Styled(ViewNB)>
  <Styled(ViewNB)
    padder={true}
  >
    <Styled(Item)
      stackedLabel={true}
    >
      <Styled(Label)>
        Email
      </Styled(Label)>
      <Styled(Input)
        onBlur={[Function]}
        onChangeText={[MockFunction]}
        value=""
      />
    </Styled(Item)>
  </Styled(ViewNB)>
  <Styled(ViewNB)
    padder={true}
  >
    <Styled(Button)
      block={true}
      onPress={[Function]}
      rounded={true}
      success={true}
      testID="resetBtn"
    >
      <Styled(Icon)
        color="white"
        fontSize={30}
        name="spinner"
        type="EvilIcons"
      />
      <Styled(Text)>
        Reset the password
      </Styled(Text)>
    </Styled(Button)>
  </Styled(ViewNB)>
</Styled(ViewNB)>
`;

exports[`FormUi 3`] = `
<Styled(ViewNB)>
  <Styled(ViewNB)
    padder={true}
  >
    <Styled(Item)
      stackedLabel={true}
    >
      <Styled(Label)>
        Email
      </Styled(Label)>
      <Styled(Input)
        onBlur={[Function]}
        onChangeText={[MockFunction]}
        value=""
      />
    </Styled(Item)>
  </Styled(ViewNB)>
  <Styled(ViewNB)
    padder={true}
  >
    <Styled(Button)
      block={true}
      onPress={[Function]}
      rounded={true}
      success={true}
      testID="resetBtn"
    >
      <Styled(Icon)
        color="white"
        fontSize={30}
        name="spinner"
        type="EvilIcons"
      />
      <Styled(Text)>
        Reset the password
      </Styled(Text)>
    </Styled(Button)>
  </Styled(ViewNB)>
</Styled(ViewNB)>
`;

exports[`Formik wrapper 1`] = `
<Styled(ViewNB)>
  <ErrorableImage
    source={
      Object {
        "testUri": "../../../src/components/login/img/header.png",
      }
    }
    width={750}
  />
  <Formik
    enableReinitialize={false}
    initialValues={
      Object {
        "connection": null,
        "email": "",
      }
    }
    isInitialValid={false}
    onSubmit={[Function]}
    validateOnBlur={true}
    validateOnChange={true}
    validationSchema={
      ObjectSchema {
        "_blacklist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "_conditions": Array [],
        "_defaultDefault": [Function],
        "_deps": Array [],
        "_excludedEdges": Array [],
        "_exclusive": Object {},
        "_mutate": false,
        "_nodes": Array [
          "email",
        ],
        "_options": Object {
          "abortEarly": true,
          "recursive": true,
        },
        "_type": "object",
        "_typeError": [Function],
        "_whitelist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "fields": Object {
          "email": StringSchema {
            "_blacklist": RefSet {
              "list": Set {},
              "refs": Map {},
            },
            "_conditions": Array [],
            "_deps": Array [],
            "_exclusive": Object {
              "required": false,
              "undefined": false,
            },
            "_mutate": false,
            "_options": Object {
              "abortEarly": true,
              "recursive": true,
            },
            "_type": "string",
            "_typeError": [Function],
            "_whitelist": RefSet {
              "list": Set {},
              "refs": Map {},
            },
            "tests": Array [
              [Function],
              [Function],
              [Function],
            ],
            "transforms": Array [
              [Function],
            ],
          },
        },
        "tests": Array [],
        "transforms": Array [
          [Function],
        ],
      }
    }
  >
    <Component />
  </Formik>
</Styled(ViewNB)>
`;
